--- a/TechtaGram/Info.plist
+++ b/TechtaGram/Info.plist
@@ -43,6 +43,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSCameraUsageDescription</key>
+	<string>アプリ内で編集する写真を撮影するためカメラを起動します</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>アプリ内で編集する画像をフォトライブラリから呼び出します</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>編集した画像をフォトライブラリに追加します</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
